aggiunti nuovi commenti

--- a/ProgettoSBB/sbbFrontNuovo/src/app/app.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/app.html
@@ -1,3 +1,6 @@
+<!-- Layout fisso dell'applicazione: top-menu e filter-bar rimangono sempre visibili.
+     <router-outlet> è il punto dove Angular inserisce il componente
+     della route attiva: cambia solo questa parte, il resto non viene ricaricato. -->
 <app-top-menu></app-top-menu>
 <app-filter-bar></app-filter-bar>
 <router-outlet></router-outlet>
